# kata-phase1

./: CMakeLists.txt  README
src/: CMakeLists.txt  kata.abi  kata.cpp  kata.wasm
tests/: CMakeLists.txt  contracts.hpp.in  kata_tests.cpp  main.cpp
